--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sierra_madre_auth"
-version = "0.1.0"
+version = "1.1.0"
 description = "Reusable auth sdk for flask"
 authors = ["Alexander Ríos"]
 packages = [{ include = "sierra_madre_auth" }]
@@ -9,7 +9,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-sierra_madre_core = {url = "https://github.com/sierra-madre/core-py-sdk/releases/download/v1.0.1/sierra_madre_core-0.1.0-py3-none-any.whl"}
+sierra-madre-core = "^1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
